--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+admin_prostooremonte:
+    resource: "@AdminProstooremonteBundle/Resources/config/routing.yml"
+    prefix:   /
+
 prostooremonte:
     resource: "@ProstooremonteBundle/Resources/config/routing.yml"
     prefix:   /
